lang/Gt/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Gt/Par.y
-----------------------------------------------------------------------------

state 42 contains 1 shift/reduce conflicts.
state 60 contains 1 shift/reduce conflicts.
state 71 contains 1 reduce/reduce conflicts.
state 121 contains 1 reduce/reduce conflicts.
state 166 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pTranslationUnit_internal -> TranslationUnit   (0)
	Ident -> L_Ident                                   (1)
	Char -> L_charac                                   (2)
	Integer -> L_integ                                 (3)
	TranslationUnit -> ListDecl                        (4)
	Type -> Type1                                      (5)
	Type -> Type1 '[' ']'                              (6)
	Type1 -> '(' Type ')'                              (7)
	Type1 -> 'int'                                     (8)
	Type1 -> 'bool'                                    (9)
	Type1 -> 'char'                                    (10)
	Type1 -> 'void'                                    (11)
	Type1 -> 'const' Type                              (12)
	Type1 -> '(' ListType ')' '->' Type                (13)
	ListType ->                                        (14)
	ListType -> Type                                   (15)
	ListType -> Type ',' ListType                      (16)
	Arg -> Ident ':' Type                              (17)
	Arg -> '&' Ident ':' Type                          (18)
	ListArg ->                                         (19)
	ListArg -> Arg                                     (20)
	ListArg -> Arg ',' ListArg                         (21)
	Block -> '{' ListDecl ListInstr '}'                (22)
	Decl -> 'var' Ident ':' Type ';'                   (23)
	Decl -> 'var' Ident '=' Expr ';'                   (24)
	Decl -> 'const' Ident '=' Expr ';'                 (25)
	Decl -> 'fn' Ident '(' ListArg ')' '->' Type Block   (26)
	ListDecl ->                                        (27)
	ListDecl -> Decl ListDecl                          (28)
	Instr -> Block                                     (29)
	Instr -> Expr ';'                                  (30)
	Instr -> 'if' '(' Expr ')' Instr                   (31)
	Instr -> 'if' '(' Expr ')' Instr 'else' Instr      (32)
	Instr -> 'while' '(' Expr ')' Instr                (33)
	Instr -> 'do' Instr 'while' '(' Expr ')' ';'       (34)
	Instr -> 'for' '(' Expr ';' Expr ';' Expr ')' Instr   (35)
	Instr -> 'continue' ';'                            (36)
	Instr -> 'break' ';'                               (37)
	Instr -> 'return' Expr ';'                         (38)
	ListInstr ->                                       (39)
	ListInstr -> Instr ListInstr                       (40)
	Expr -> Expr1                                      (41)
	Expr -> '\\' '(' ListArg ')' '->' Type '=>' Block   (42)
	Expr ->                                            (43)
	Expr1 -> Expr2                                     (44)
	Expr1 -> Expr9 AssignOp Expr2                      (45)
	Expr2 -> Expr3                                     (46)
	Expr2 -> '(' Expr2 '||' Expr3 ')'                  (47)
	Expr3 -> Expr4                                     (48)
	Expr3 -> '(' Expr3 '&&' Expr4 ')'                  (49)
	Expr4 -> Expr5                                     (50)
	Expr4 -> Expr4 EqOp Expr5                          (51)
	Expr5 -> Expr6                                     (52)
	Expr5 -> Expr5 RelOp Expr6                         (53)
	Expr6 -> Expr7                                     (54)
	Expr6 -> Expr6 AddOp Expr7                         (55)
	Expr7 -> Expr8                                     (56)
	Expr7 -> Expr7 MulOp Expr8                         (57)
	Expr8 -> Expr9                                     (58)
	Expr8 -> UnaryOp Expr9                             (59)
	Expr9 -> '(' Expr ')'                              (60)
	Expr9 -> Integer                                   (61)
	Expr9 -> Char                                      (62)
	Expr9 -> 'true'                                    (63)
	Expr9 -> 'false'                                   (64)
	Expr9 -> Ident                                     (65)
	Expr9 -> Expr9 '[' Expr ']'                        (66)
	Expr9 -> Expr9 '(' ListExpr ')'                    (67)
	ListExpr ->                                        (68)
	ListExpr -> Expr                                   (69)
	ListExpr -> Expr ',' ListExpr                      (70)
	UnaryOp -> '+'                                     (71)
	UnaryOp -> '-'                                     (72)
	UnaryOp -> '!'                                     (73)
	UnaryOp -> '~'                                     (74)
	MulOp -> '*'                                       (75)
	MulOp -> '/'                                       (76)
	MulOp -> '%'                                       (77)
	AddOp -> '+'                                       (78)
	AddOp -> '-'                                       (79)
	RelOp -> '<'                                       (80)
	RelOp -> '<='                                      (81)
	RelOp -> '>'                                       (82)
	RelOp -> '>='                                      (83)
	EqOp -> '=='                                       (84)
	EqOp -> '!='                                       (85)
	AssignOp -> '='                                    (86)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'->'           { PT _ (TS _ 12) }
	'/'            { PT _ (TS _ 13) }
	':'            { PT _ (TS _ 14) }
	';'            { PT _ (TS _ 15) }
	'<'            { PT _ (TS _ 16) }
	'<='           { PT _ (TS _ 17) }
	'='            { PT _ (TS _ 18) }
	'=='           { PT _ (TS _ 19) }
	'=>'           { PT _ (TS _ 20) }
	'>'            { PT _ (TS _ 21) }
	'>='           { PT _ (TS _ 22) }
	'['            { PT _ (TS _ 23) }
	'\\'           { PT _ (TS _ 24) }
	']'            { PT _ (TS _ 25) }
	'bool'         { PT _ (TS _ 26) }
	'break'        { PT _ (TS _ 27) }
	'char'         { PT _ (TS _ 28) }
	'const'        { PT _ (TS _ 29) }
	'continue'     { PT _ (TS _ 30) }
	'do'           { PT _ (TS _ 31) }
	'else'         { PT _ (TS _ 32) }
	'false'        { PT _ (TS _ 33) }
	'fn'           { PT _ (TS _ 34) }
	'for'          { PT _ (TS _ 35) }
	'if'           { PT _ (TS _ 36) }
	'int'          { PT _ (TS _ 37) }
	'return'       { PT _ (TS _ 38) }
	'true'         { PT _ (TS _ 39) }
	'var'          { PT _ (TS _ 40) }
	'void'         { PT _ (TS _ 41) }
	'while'        { PT _ (TS _ 42) }
	'{'            { PT _ (TS _ 43) }
	'||'           { PT _ (TS _ 44) }
	'}'            { PT _ (TS _ 45) }
	'~'            { PT _ (TS _ 46) }
	L_Ident        { PT _ (TV _) }
	L_charac       { PT _ (TC _) }
	L_integ        { PT _ (TI _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pTranslationUnit_internal rule  0
	Ident           rule  1
	Char            rule  2
	Integer         rule  3
	TranslationUnit rule  4
	Type            rules 5, 6
	Type1           rules 7, 8, 9, 10, 11, 12, 13
	ListType        rules 14, 15, 16
	Arg             rules 17, 18
	ListArg         rules 19, 20, 21
	Block           rule  22
	Decl            rules 23, 24, 25, 26
	ListDecl        rules 27, 28
	Instr           rules 29, 30, 31, 32, 33, 34, 35, 36, 37, 38
	ListInstr       rules 39, 40
	Expr            rules 41, 42, 43
	Expr1           rules 44, 45
	Expr2           rules 46, 47
	Expr3           rules 48, 49
	Expr4           rules 50, 51
	Expr5           rules 52, 53
	Expr6           rules 54, 55
	Expr7           rules 56, 57
	Expr8           rules 58, 59
	Expr9           rules 60, 61, 62, 63, 64, 65, 66, 67
	ListExpr        rules 68, 69, 70
	UnaryOp         rules 71, 72, 73, 74
	MulOp           rules 75, 76, 77
	AddOp           rules 78, 79
	RelOp           rules 80, 81, 82, 83
	EqOp            rules 84, 85
	AssignOp        rule  86

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pTranslationUnit_internal -> . TranslationUnit    (rule 0)

	'const'        shift, and enter state 6
	'fn'           shift, and enter state 7
	'var'          shift, and enter state 8
	%eof           reduce using rule 27

	TranslationUnitgoto state 3
	Decl           goto state 4
	ListDecl       goto state 5

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pTranslationUnit_internal -> TranslationUnit .    (rule 0)

	%eof           accept


State 4

	ListDecl -> Decl . ListDecl                         (rule 28)

	'!'            reduce using rule 27
	'('            reduce using rule 27
	'+'            reduce using rule 27
	'-'            reduce using rule 27
	';'            reduce using rule 27
	'\\'           reduce using rule 27
	'break'        reduce using rule 27
	'const'        shift, and enter state 6
	'continue'     reduce using rule 27
	'do'           reduce using rule 27
	'false'        reduce using rule 27
	'fn'           shift, and enter state 7
	'for'          reduce using rule 27
	'if'           reduce using rule 27
	'return'       reduce using rule 27
	'true'         reduce using rule 27
	'var'          shift, and enter state 8
	'while'        reduce using rule 27
	'{'            reduce using rule 27
	'}'            reduce using rule 27
	'~'            reduce using rule 27
	L_Ident        reduce using rule 27
	L_charac       reduce using rule 27
	L_integ        reduce using rule 27
	%eof           reduce using rule 27

	Decl           goto state 4
	ListDecl       goto state 12

State 5

	TranslationUnit -> ListDecl .                       (rule 4)

	%eof           reduce using rule 4


State 6

	Decl -> 'const' . Ident '=' Expr ';'                (rule 25)

	L_Ident        shift, and enter state 2

	Ident          goto state 11

State 7

	Decl -> 'fn' . Ident '(' ListArg ')' '->' Type Block    (rule 26)

	L_Ident        shift, and enter state 2

	Ident          goto state 10

State 8

	Decl -> 'var' . Ident ':' Type ';'                  (rule 23)
	Decl -> 'var' . Ident '=' Expr ';'                  (rule 24)

	L_Ident        shift, and enter state 2

	Ident          goto state 9

State 9

	Decl -> 'var' Ident . ':' Type ';'                  (rule 23)
	Decl -> 'var' Ident . '=' Expr ';'                  (rule 24)

	':'            shift, and enter state 15
	'='            shift, and enter state 16


State 10

	Decl -> 'fn' Ident . '(' ListArg ')' '->' Type Block    (rule 26)

	'('            shift, and enter state 14


State 11

	Decl -> 'const' Ident . '=' Expr ';'                (rule 25)

	'='            shift, and enter state 13


State 12

	ListDecl -> Decl ListDecl .                         (rule 28)

	'!'            reduce using rule 28
	'('            reduce using rule 28
	'+'            reduce using rule 28
	'-'            reduce using rule 28
	';'            reduce using rule 28
	'\\'           reduce using rule 28
	'break'        reduce using rule 28
	'continue'     reduce using rule 28
	'do'           reduce using rule 28
	'false'        reduce using rule 28
	'for'          reduce using rule 28
	'if'           reduce using rule 28
	'return'       reduce using rule 28
	'true'         reduce using rule 28
	'while'        reduce using rule 28
	'{'            reduce using rule 28
	'}'            reduce using rule 28
	'~'            reduce using rule 28
	L_Ident        reduce using rule 28
	L_charac       reduce using rule 28
	L_integ        reduce using rule 28
	%eof           reduce using rule 28


State 13

	Decl -> 'const' Ident '=' . Expr ';'                (rule 25)

	'!'            shift, and enter state 31
	'('            shift, and enter state 32
	'+'            shift, and enter state 33
	'-'            shift, and enter state 34
	';'            reduce using rule 43
	'\\'           shift, and enter state 35
	'false'        shift, and enter state 36
	'true'         shift, and enter state 37
	'~'            shift, and enter state 38
	L_Ident        shift, and enter state 2
	L_charac       shift, and enter state 39
	L_integ        shift, and enter state 40

	Ident          goto state 17
	Char           goto state 18
	Integer        goto state 19
	Expr           goto state 53
	Expr1          goto state 21
	Expr2          goto state 22
	Expr3          goto state 23
	Expr4          goto state 24
	Expr5          goto state 25
	Expr6          goto state 26
	Expr7          goto state 27
	Expr8          goto state 28
	Expr9          goto state 29
	UnaryOp        goto state 30

State 14

	Decl -> 'fn' Ident '(' . ListArg ')' '->' Type Block    (rule 26)

	'&'            shift, and enter state 52
	')'            reduce using rule 19
	L_Ident        shift, and enter state 2

	Ident          goto state 49
	Arg            goto state 50
	ListArg        goto state 51

State 15

	Decl -> 'var' Ident ':' . Type ';'                  (rule 23)

	'('            shift, and enter state 43
	'bool'         shift, and enter state 44
	'char'         shift, and enter state 45
	'const'        shift, and enter state 46
	'int'          shift, and enter state 47
	'void'         shift, and enter state 48

	Type           goto state 41
	Type1          goto state 42

State 16

	Decl -> 'var' Ident '=' . Expr ';'                  (rule 24)

	'!'            shift, and enter state 31
	'('            shift, and enter state 32
	'+'            shift, and enter state 33
	'-'            shift, and enter state 34
	';'            reduce using rule 43
	'\\'           shift, and enter state 35
	'false'        shift, and enter state 36
	'true'         shift, and enter state 37
	'~'            shift, and enter state 38
	L_Ident        shift, and enter state 2
	L_charac       shift, and enter state 39
	L_integ        shift, and enter state 40
